--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "deptry"
-version = "0.0.1"
+version = "0.0.1-doppel"
 description = "A command line utility to check for unused, missing and transitive dependencies in a Python project."
 authors = [
     { name = "Florian Maas", email = "fpgmaas@gmail.com" },
